* : bugfix or changed code
Bug numbers are references to bugs in http://www.achievo.org/bugzilla
[names] are references to people in the AUTHORS file.

Changed in ATK 5.5.1
--------------------
+ Added atkMessageQueue for user notification messages, which can be shown
  via the atkmessages plugin. [Patrick]
+ Added atkCalculatorAttribute for adding columns with calculated values. [Ivo]
+ Added setText method to atkLanguage. [Sandy]
+ Added fetchvalues method to atkBoolRelation, it now returns 0 if nothing
  is checked instead of NULL (The atkOrgRec also gives 0). [Sandy]
+ Added atkPluginTestCase class for easier testing of Smarty plugins. [Ivo]
+ Included parent class for the atkmockquery. [Martin]
+ Added type="text/css" attribute to <style> tags. [Guido]
+ Added support for row and col span in the atkTableRenderer. [Sandy]
+ Added NOLOAD constant for use in atkAttribute's loadType() method. [Ivo]
+ Added ability to set a CSS class per row, column or cell. [Guido]
+ Added reloadapp(); function which can be used to reload all the frames in
  your application. [Boy]
+ Added support for user-level language support. [Boy]
+ All relationships based on atkManyToManyRelation now have better localKey
  and remoteKey detection. The use of setRemoteKey and setLocalKey is no
  longer necessary if the foreign keys have the same name with the relation
  with _id appended to it. [Ivo]
+ Added atkManyBoolRelation::setCols() method to set the number of columns
  with checkboxes. [Ivo]
* Introduced atkeditlng which can be passed along to force ML attributes to
  display a specific language. [Boy]
* Fixed a bug in the 'remove current file' feature of atkFileAttribute when
  AF_FILE_PHYSICAL_DELETE was set. [Ivo]
* atkNode's validateFilter method can now cope with sql 'IN' operator. [Yury]
* Also collect timing info at debuglevel 0 for mailreports. [Boy]
* Fixed php warning in atkMlNumberAttribute. [Ivo]
* Fixed error in triggerError method when atkLanguage was not imported. [Ivo]