@@ -47,6 +47,9 @@ development of new features.
 * For Dataroomservices, The Netherlands (http://www.dataroomservices.nl), we
   added PDA detection support.
 
+* For Zicht Nieuwe Media Ontwerpers, The Netherlands (http://www.zicht.nl), we
+  added the atkShuttleRelation.
+
 To become a sponsor, please read http://www.achievo.org/support/sponsor.
 
 
